--- a/thanks.html
+++ b/thanks.html
@@ -42,16 +42,13 @@ https://templatemo.com/tm-584-pod-talk
         <div class="content">
             <div class="wrapper-1">
                 <div class="wrapper-2">
-                    <h1>Merci !</h1>
-                    <p>Merci de vous être inscrit à notre newsletter.</p>
+                    <h1>Danke!</h1>
+                    <p>Vielen Dank für Ihre Anmeldung zu unserem Newsletter.</p>
                     <p>
-                        Vous devriez recevoir un e-mail de confirmation sous
-                        peu.
+                        Sie sollten in Kürze eine Bestätigungs-E-Mail erhalten.
                     </p>
                     <a href="index.html">
-                        <button class="go-home">
-                            Retour à la page principale
-                        </button>
+                        <button class="go-home">Zurück zur Hauptseite</button>
                     </a>
                 </div>
             </div>
